# rl-arbitrage

./: .env.example  .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
include/: order_book.hpp
scripts/: download_data.py  downloads.py  inspect_data.py  preprocess.py  preprocess_data.py  read.py  verify.py  verify_data.py
src/cpp/: main.cpp
src/rl_arbitrage/: __init__.py  config.py  download.py  inspect.py  preprocess.py  verify.py
